# led_string_remote

./: .gitignore  CMakeLists.txt
src/: ir.cpp  ir.h  led.cpp  led.h  main.cpp
